--- a/package.json
+++ b/package.json
@@ -3,33 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.10.0",
-    "clsx": "^2.1.1",
-    "next": "15.4.1",
-    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.60.0",
-    "react-icons": "^5.5.0"
+    "next": "15.4.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
-    "tailwindcss": "^4.1.11",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3"
   }
 }
